# morpheusx

./: .gdbinit  .gitignore  BUILD.md  BUILD_TEST_STATUS.md  COMPLETION_PLAN.md  CONTRIBUTING.md  Cargo.toml  FINAL_REFACTORING_COMPLETE.md  FINAL_REFACTORING_STATUS.md  KERNEL_CONTROL.md  LICENSE-APACHE  LICENSE-GPL-3.0  LICENSE-MIT  README.md  REFACTORING_BATCH2_SUMMARY.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_SUMMARY.md  ROADMAP.md  SETUP_TOOL_ISSUE.md  SYSTEM_MONITOR_SPEC.md  VISION.md  clippy.toml  debug.sh  deny.toml  entry.rs  please_help.txt  rust-toolchain.toml  rustfmt.toml  setup-dev.sh  wait_test.rs  x86_64-morpheus.json
bootloader/: Cargo.toml  build.rs
bootloader/asm/keyboard/: ps2.s
bootloader/src/: alloc_heap.rs  baremetal.rs  boot.rs  bsod.rs  bsod_bg_data.rs  bsod_bg_data_v1.rs  main.rs  storage.rs  uefi_allocator.rs
bootloader/src/apps/: mod.rs  storage_manager.rs  task_manager.rs
bootloader/src/boot/: boot_params.rs  efi_stub.rs  gop.rs  handoff.rs  iso_boot.rs  kernel_loader.rs  loader.rs  memory.rs  mod.rs  network_boot.rs
bootloader/src/installer/: mod.rs  operations.rs
bootloader/src/tui/: boot_sequence.rs  debug.rs  desktop.rs  distro_launcher.rs  event_adapter.rs  fb_canvas.rs  input.rs  installer_menu.rs  installer_menu.rs.backup  logo.rs  main_menu.rs  mod.rs  mouse.rs  partition_wizard.rs  rain.rs  renderer.rs
bootloader/src/uefi/: block_io.rs  block_io_adapter.rs  disk.rs  file_system.rs  gpt_adapter.rs  http.rs  mod.rs  service_binding.rs
compd/: Cargo.toml
compd/src/: font.rs  main.rs  messages.rs
compd/src/islands/: desk.rs  focus.rs  input.rs  menu.rs  mod.rs  overview.rs  renderer.rs  surface_mgr.rs  toasts.rs  vsync.rs
core/: Cargo.toml
core/log/: mod.rs  recovery.rs  segment.rs
core/src/: lib.rs  logger.rs  uefi_alloc.rs
core/src/disk/: gpt.rs  gpt_ops.rs  gpt_writer.rs  manager.rs  mod.rs  partition.rs
core/src/fs/: fat32_format.rs  fat32_ops.rs  fat32_ops.rs.backup  mod.rs
core/src/iso/: adapter.rs  chunk.rs  error.rs  iso9660_bridge.rs  manifest.rs  mod.rs  reader.rs  storage.rs  writer.rs
core/src/net/: config.rs  error.rs  init.rs  mod.rs  ring_buffer.rs  status.rs
display/: Cargo.toml  README.md  build.rs
display/asm/: fb.s
display/src/: colors.rs  console.rs  fb_backend.rs  font.rs  framebuffer.rs  global.rs  lib.rs  types.rs  uefi_backend.rs
display/src/asm/: fb.rs  mod.rs
dma-pool/: Cargo.toml
dma-pool/src/: lib.rs
helix/: Cargo.toml
helix/src/: bitmap.rs  checkpoint.rs  crc.rs  device.rs  engine.rs  error.rs  extent.rs  format.rs  lib.rs  types.rs
helix/src/index/: btree.rs  mod.rs
helix/src/log/: mod.rs  recovery.rs  segment.rs
helix/src/ops/: dir.rs  mod.rs  read.rs  write.rs
helix/src/vfs/: global.rs  mod.rs
helix/tests/: classification.rs  fragmentation.rs  harness.rs  leaf.rs  log_durability.rs  log_record.rs  logfull.rs  paths.rs  reclaim.rs  recovery.rs  rename.rs  snapshot.rs
helix/tests/common/: mod.rs
hwinit/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
hwinit/asm/cpu/: README.md  ap_trampoline.s  cache.s  calibrate.s  context_switch.s  mmio.s  pio.s  syscall.s
hwinit/asm/fb/: present.s
hwinit/asm/pci/: README.md  ecam.s  legacy.s  virtio_cap.s
hwinit/src/: README.md  elf.rs  heap.rs  input.rs  lib.rs  memory.rs  mouse.rs  pipe.rs  platform.rs  ps2_mouse.rs  serial.rs  stdin.rs  stdout.rs  sync.rs
hwinit/src/cpu/: README.md  acpi.rs  ap_boot.rs  apic.rs  barriers.rs  cache.rs  gdt.rs  idt.rs  mmio.rs  mod.rs  per_cpu.rs  pic.rs  pio.rs  reset.rs  sse.rs  tsc.rs
hwinit/src/dma/: README.md  mod.rs  region.rs
hwinit/src/paging/: entry.rs  mod.rs  table.rs
hwinit/src/pci/: README.md  capability.rs  config.rs  dump.rs  mod.rs  msi.rs
hwinit/src/process/: context.rs  mod.rs  scheduler.rs  (+2 more)
iso9660/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  run-tests.sh
iso9660/src/: error.rs  lib.rs  types.rs
iso9660/tests/: block_io_tests.rs  boot_tests.rs  directory_tests.rs  file_tests.rs  integration_tests.rs  volume_tests.rs
libmorpheus/: Cargo.toml  linker.ld
libmorpheus/src/: abi.rs  buddy.rs  compositor.rs  desktop.rs  entry.rs  env.rs  error.rs  fs.rs  hw.rs  io.rs  lib.rs  log.rs  mem.rs  net.rs  persist.rs  process.rs  raw.rs  sync.rs  sys.rs  task.rs  thread.rs  time.rs
morpheus-block/: Cargo.toml  build.rs
morpheus-block-types/: Cargo.toml
morpheus-block-types/src/: lib.rs
morpheus-block/src/: block_io_adapter.rs  block_traits.rs  boot_probe.rs  device.rs  gpt.rs  lib.rs  raw_device.rs  unified_block_io.rs  virtio_blk.rs
morpheus-hal-x86_64/: Cargo.toml  build.rs
morpheus-hal-x86_64/src/: hal_impl.rs  heap.rs  intr.rs  io.rs  lib.rs  memory.rs  platform.rs  rtc.rs  serial.rs  sync.rs
morpheus-kernel/: Cargo.toml
morpheus-kernel/src/: clock.rs  elf.rs  global.rs  init.rs  input.rs  lib.rs  mouse.rs  pipe.rs  ps2_mouse.rs  sched_hooks.rs  serial.rs  stdin.rs  stdout.rs  sync.rs
morpheus-net-stack/: Cargo.toml
morpheus-net-stack/src/: display.rs  entry.rs  lib.rs
morpheus-storage-format/: Cargo.toml
morpheus-storage-format/src/: lib.rs
morpheus-virtio/: Cargo.toml  build.rs
morpheus-virtio/src/: asm.rs  lib.rs  transport.rs  types.rs
morpheus-x86-asm/: Cargo.toml  build.rs
morpheus-x86-asm/src/: barriers.rs  cache.rs  delay.rs  lib.rs  mmio.rs  pio.rs  tsc.rs
morpheus-xhci/: Cargo.toml  build.rs
morpheus-xhci/src/: controller.rs  dma.rs  enum.rs  enumerate.rs  hid_iface.rs  hub.rs  lib.rs  logger.rs  regs.rs  rings.rs
network/: ARCHITECTURE.md  ARCHITECTURE_V2.md  Cargo.toml  EMBEDDED_EXPANSION.md  PLATFORM_COVERAGE.md  README.md  build.rs
network/src/: alloc_heap.rs  display.rs  entry.rs  error.rs  lib.rs  types.rs
persistent/: ARCHITECTURE.md  Cargo.toml  README.md  RELOCATION_EXPLAINED.md  TODO.md
persistent/examples/: integration.rs
persistent/src/: feedback.rs  lib.rs
ping/: Cargo.toml  README.md
ping/src/: checksum.rs  lib.rs  packet.rs  pinger.rs  types.rs
shelld/: Cargo.toml
shelld/src/: main.rs
tests/system-visualizer/: Cargo.toml
(+864 files in other folders)
