[workspace]
resolver = "2"
members = [
    "bootloader",
    "cli",
    "core",
    "persistent",
    "updater",
    "network",
    "iso9660",
    "display",
    "hwinit",
    "ui",
    "helix",
    "libmorpheus",
    "shell",
    "gfx3d",
    "channel",
    "compd",
    "init",
    "shelld",
    "settings",
    "tests/syscall-e2e",
    "tests/spinning-cube",
    "tests/system-visualizer",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["PopRdi"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# All workspace crates reference each other here
morpheus-core = { path = "core" }
morpheus-persistent = { path = "persistent" }
morpheus-updater = { path = "updater" }
morpheus-network = { path = "network" }
morpheus-display = { path = "display", features = ["framebuffer-backend"] }
morpheus-hwinit = { path = "hwinit" }
# Keep dependency name `iso9660` for code imports, while the package is published as `iso9660-rs`
iso9660 = { path = "iso9660", package = "iso9660-rs" }
morpheus-ui = { path = "ui" }
morpheus-helix = { path = "helix" }


[profile.dev]
panic = "abort"      # No unwinding in dev either
