[package]
name = "morpheus-bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
morpheus-display = { workspace = true }
morpheus-helix = { workspace = true }
morpheus-hwinit = { workspace = true }
morpheus-network = { workspace = true }
morpheus-ui = { workspace = true }
# Post-EBS heap
linked_list_allocator = "0.10"
spin = { version = "0.9", default-features = false, features = ["lock_api", "spin_mutex"] }


[target.'cfg(target_arch = "x86_64")'.dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]

[target.'cfg(target_arch = "arm")'.dependencies]
