[package]
name = "morpheus-bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
morpheus-display = { workspace = true }
morpheus-helix = { workspace = true }
morpheus-hwinit = { workspace = true }
morpheus-network = { workspace = true }
morpheus-ui = { workspace = true }
# Post-EBS heap
linked_list_allocator.workspace = true
spin.workspace = true
