[package]
name = "morpheus-bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
morpheus-block = { workspace = true }
morpheus-display = { workspace = true }
morpheus-helix = { workspace = true }
# Arch-agnostic kernel: bootloader drives the kernel late-init phases that
# K10 split out of hwinit (scheduler / syscalls / FS).
morpheus-kernel = { workspace = true }
# Per-arch HAL impl: bootloader drives phases 1-9 of machine bring-up and
# wires the kernel-supplied fn-pointer hooks (TSC publish, HID init, xHCI
# MSI-X/runtime) before invoking platform init.
morpheus-hal-x86_64 = { workspace = true }
# Trait surface — only used at the boundary between hal-x86_64 hooks and
# morpheus-xhci (BusAddr conversion).
morpheus-hal-api = { workspace = true }
# xHCI driver: bootloader installs HID sinks + runtime polling install hook.
morpheus-xhci = { workspace = true }
morpheus-net-stack = { workspace = true }
morpheus-nic = { workspace = true }
morpheus-ui = { workspace = true }
morpheus-virtio = { workspace = true }
# GPT disk I/O traits for direct use (replaces morpheus_network::GptBlockIo / GptLba shims).
gpt_disk_io.workspace = true
gpt_disk_types.workspace = true
# Post-EBS heap
linked_list_allocator.workspace = true
spin.workspace = true
