[package]
name    = "compd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "compd"
path = "src/main.rs"

[dependencies]
libmorpheus = { path = "../libmorpheus" }
channel = { path = "../channel" }
keymap = { path = "../keymap" }
wm-geom = { path = "../wm-geom" }
phosphor-notify = { path = "../../crates/phosphor-notify" }
