[package]
name = "morpheus-core"
version.workspace = true
edition.workspace = true

[dependencies]
# GPT disk handling (Google's no_std library)
gpt_disk_types = { version = "0.16", default-features = false }
gpt_disk_io = { version = "0.16", default-features = false }
uguid = { version = "2.1", default-features = false }

# DMA pool for buffer management
dma-pool = { path = "../dma-pool" }

# NOTE: morpheus-network dependency removed to break cyclic dependency.
# Network crate now depends on core for IsoManifest types.
# The drain_network_logs() function is stubbed out.

[features]
fat32_debug = []
