[package]
name = "morpheus-core"
version.workspace = true
edition.workspace = true

[dependencies]
# GPT disk handling (Google's no_std library)
gpt_disk_types.workspace = true
gpt_disk_io.workspace = true

# NOTE: morpheus-network dependency removed to break cyclic dependency.
# Network crate now depends on core for IsoManifest types.
# The drain_network_logs() function is stubbed out.
