[package]
name = "morpheus-display"
version.workspace = true
edition.workspace = true
description = "Framebuffer display driver for Morpheus - ASM-first design for post-EBS"
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
default = []
std = []
uefi-backend = []
framebuffer-backend = []

[dependencies]
