[package]
name = "dma-pool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Firmware-agnostic static DMA memory pool allocator for bare-metal drivers"

[features]
default = []

[dependencies]
# No dependencies - pure no_std, no alloc
