[package]
name = "morpheus-helix"
version.workspace = true
edition.workspace = true
description = "HelixFS — log-structured, time-travel filesystem for MorpheusX"

[features]
default = []

[dependencies]
morpheus-foundation.workspace = true
gpt_disk_io.workspace = true
gpt_disk_types.workspace = true
