[package]
name = "morpheus-hwinit"
version.workspace = true
edition.workspace = true
description = "Hardware initialization layer for MorpheusX"

[features]
default = ["smp"]
smp = []

[dependencies]
# Heap allocator backing
linked_list_allocator.workspace = true
# Spinlock (we also have our own, but this is well-tested)
spin.workspace = true
# HelixFS filesystem
morpheus-helix = { path = "../helix" }
# Persistence layer (PE parsing, storage backends)
morpheus-persistent = { path = "../persistent" }
