[package]
name = "iso9660-rs"
version = "1.0.2"
edition = "2021"
authors = ["MorpheusX Contributors"]
license = "MIT OR Apache-2.0"
description = "A no_std ISO9660 filesystem implementation with El Torito boot support"
keywords = ["iso9660", "filesystem", "no_std", "cdrom", "eltorito"]
categories = ["no-std", "filesystem", "parsing", "embedded"]
repository = "https://github.com/Poprdi/morpheusx/tree/master/iso9660"
documentation = "https://docs.rs/iso9660-rs"
readme = "README.md"
rust-version = "1.70"

[dependencies]
# Core dependencies (no_std compatible)
gpt_disk_io = { version = "0.16", default-features = false }
gpt_disk_types = { version = "0.16", default-features = false }

[dev-dependencies]
# For std-based testing only
gpt_disk_io = { version = "0.16" }
gpt_disk_types = { version = "0.16" }

[features]
default = []
# Enable Rock Ridge POSIX extensions
rock-ridge = []
# Enable Joliet long filename support  
joliet = []
# Enable all extensions
all-extensions = ["rock-ridge", "joliet"]
# Debug features
trace = []
debug = []
debug-mount = []

[lib]
name = "iso9660"
path = "src/lib.rs"
