[package]
name = "libmorpheus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Userspace library for MorpheusX — syscall wrappers, I/O, FS API"

[dependencies]
# Pure inline asm + thin wrappers. Foundation gives us SYS_* numbers shared
# with the kernel so the two cannot drift.
morpheus-foundation.workspace = true
