[package]
name = "morpheus-network"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
dma-pool = { workspace = true }
morpheus-core = { workspace = true }

# GPT disk I/O trait for filesystem compatibility
gpt_disk_io = { version = "0.16", default-features = false }
gpt_disk_types = { version = "0.16", default-features = false }

smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-dhcpv4",
    "socket-dns",
] }

# NOTE: virtio-drivers crate removed - using ASM-first implementation
# See network/src/driver/virtio/ for the ASM-backed VirtIO driver
